# True-Legacy-Particles

./: CMakeLists.txt  README.md  about.md  changelog.md  mod.json
.github/workflows/: multi-platform.yml
src/: data.hpp  main.cpp  particle.cpp  particle.hpp  plist.cpp  util.cpp  util.hpp
src/functions/: AlwaysSpawn.cpp  AlwaysSpawn.hpp  Core.cpp  Core.hpp  InconsistentValue.cpp  InconsistentValue.hpp  LegacyScaling.cpp  LegacyScaling.hpp  LegacyTracking.cpp  LegacyTracking.hpp  TrueValues.cpp  TrueValues.hpp  always_spawn.cpp  center_dash_particles.cpp  legacy_scaling.cpp  legacy_tracking.cpp  true_values.cpp  util.cpp  util.hpp  variance.cpp  variance.hpp
src/globals/: particle.cpp  particle.hpp  settings.cpp  settings.hpp  state_handler.cpp
src/variables/: particle.cpp  particle.hpp  settings.cpp  settings.hpp
